...
  final VoidCallback onPressed;
  final bool showTrailing;

  @override
  Widget build(BuildContext context) {
    return PTElevatedButton(
      caption: 'click',
      trailing: showTrailing ? const _Dash(color: PTColors.lcBlack) : null,
      onPressed: onPressed,
    );
  }
}

...
